--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Fractal by HTML5 UP</title>
+		<title>Inove Aplicativos</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,55 +17,49 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="content">
-					<h1><a href="#">Fractal</a></h1>
-					<p>Just a simple, single page responsive<br />
-					template brought to you by <a href="http://html5up.net">HTML5 UP</a></p>
+					<h1><a href="#">Inove Aplicativos</a></h1>
+					<p>Simples e objetivo!<br/>
+					Especificação e Desenvolvimento de aplicativos mobile.</p>
 					<ul class="actions">
-						<li><a href="#" class="button primary icon solid fa-download">Download</a></li>
-						<li><a href="#one" class="button icon solid fa-chevron-down scrolly">Learn More</a></li>
+						<!--<li><a href="#two"><img src="images/google-play-badge.png" width="200px"/></a></li>-->
+						<li><a href="#one" class="button icon solid fa-chevron-down scrolly">Saiba Mais</a></li>
 					</ul>
 				</div>
-				<div class="image phone"><div class="inner"><img src="images/screen.jpg" alt="" /></div></div>
+				<div class="image phone"><div class="inner"><img src="images/image29.png" alt="" /></div></div>
 			</header>
 
 		<!-- One -->
 			<section id="one" class="wrapper style2 special">
 				<header class="major">
-					<h2>Sed ipsum magna lorem tempus amet<br />
-					vehicula et gravida elementum</h2>
+					<h2>Especificação, modelagem e transformação de ideias em projetos reais.</h2>
+					<p style="text-align: justify; margin-left: 25px; margin-right: 25px;">
+					Nossa equipe de especialistas realiza o levantamento de requisitos, prototipação e desenvolvimento, de aplicações
+					que entregam valor, utilizando metodologias ágeis em todas as etapas do projeto. Atualizações rápidas e 
+					constantes, hospedagem em nuvem, tecnologias atuais, responsivo e com foco na usabilidade e experiência do usuário. 
+					Estes são alguns de nossos diferenciais. Entre em contato e confira!</p>
 				</header>
 				<ul class="icons major">
-					<li><span class="icon solid fa-camera-retro"><span class="label">Shoot</span></span></li>
+					<!--<li><span class="icon solid fa-camera-retro"><span class="label">Shoot</span></span></li>-->
 					<li><span class="icon solid fa-sync"><span class="label">Process</span></span></li>
 					<li><span class="icon solid fa-cloud"><span class="label">Upload</span></span></li>
 				</ul>
 			</section>
-
+			
 		<!-- Two -->
 			<section id="two" class="wrapper">
 				<div class="inner alt">
 					<section class="spotlight">
-						<div class="image"><img src="images/pic01.jpg" alt="" /></div>
+						<div class="image"><img src="images/pic01.png" alt="" /></div>
 						<div class="content">
-							<h3>Magna sed ultrices</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
+							<h3>Meu Lar!</h3>
+							<p>Nosso aplicativo vai ajudar você na organização do seu Lar.<br>
+							Controle as tarefas que precisa executar, a periodicidade em que elas devem ocorrer, os produtos que você precisa
+							e ainda compartilhe instruções com quem ajuda você na execução das rotinas do lar!</p>
+							<p><a href=""><img src="images/google-play-badge.png" width="175px"/></a></p>
 						</div>
 					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/pic02.jpg" alt="" /></div>
-						<div class="content">
-							<h3>Ultrices nullam aliquam</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
-						</div>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/pic03.jpg" alt="" /></div>
-						<div class="content">
-							<h3>Aliquam sed magna</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
-						</div>
-					</section>
-					<section class="special">
+					
+					<!--<section class="special">
 						<ul class="icons labeled">
 							<li><span class="icon solid fa-camera-retro"><span class="label">Ipsum lorem accumsan</span></span></li>
 							<li><span class="icon solid fa-sync"><span class="label">Sed vehicula elementum</span></span></li>
@@ -73,21 +67,20 @@
 							<li><span class="icon solid fa-code"><span class="label">Lorem nullam tempus</span></span></li>
 							<li><span class="icon solid fa-desktop"><span class="label">Adipiscing amet sapien</span></span></li>
 						</ul>
-					</section>
+					</section>-->
 				</div>
 			</section>
 
 		<!-- Three -->
 			<section id="three" class="wrapper style2 special">
 				<header class="major">
-					<h2>Magna leo sapien gravida</h2>
-					<p>Gravida at leo elementum elit fusce accumsan dui libero, quis vehicula<br />
-					lectus ultricies eu. In convallis amet leo sapien iaculis efficitur.</p>
+					<h2>Entre em contato conosco!</h2>
+					<p>E-mail: <a href="mailto:appmeular@gmail.com?Subject=Desejo mais informações" target="_top">appmeular@gmail.com</a></p>
 				</header>
-				<ul class="actions special">
+				<!--<ul class="actions special">
 					<li><a href="#" class="button primary icon solid fa-download">Download</a></li>
 					<li><a href="#" class="button">Learn More</a></li>
-				</ul>
+				</ul>-->
 			</section>
 
 		<!-- Four -->
@@ -412,11 +405,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://www.facebook.com/aplicativomeular" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+					<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
+					<li><a href="https://www.instagram.com/appmeular" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
-				<p class="copyright">&copy; Untitled. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
+				<p class="copyright">&copy; Inove Aplicativos.</p>
 			</footer>
 
 		<!-- Scripts -->
