FT: Iniciando lancamento da versao

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -55,7 +55,10 @@
 							<p>Nosso aplicativo vai ajudar você na organização do seu Lar.<br>
 							Controle as tarefas que precisa executar, a periodicidade em que elas devem ocorrer, os produtos que você precisa
 							e ainda compartilhe instruções com quem ajuda você na execução das rotinas do lar!</p>
-							<p><a href=""><img src="images/google-play-badge.png" width="175px"/></a></p>
+							<p>
+								<a href="https://play.google.com/store/apps/details?id=com.me.fa.faxinapp"><img src="images/google-play-badge.png" height="50px"/></a>
+								<a href=""><img src="images/ios.png"height="50px"/></a>
+							</p>
 						</div>
 					</section>
 					
