FT: Adicionando galeria de imagens

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<title>Inove Aplicativos</title>
+		<link rel="shortcut icon" href="images/favicon.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -25,7 +26,14 @@
 						<li><a href="#one" class="button icon solid fa-chevron-down scrolly">Saiba Mais</a></li>
 					</ul>
 				</div>
-				<div class="image phone"><div class="inner"><img src="images/image29.png" alt="" /></div></div>
+				<div class="image phone">
+						<div class="inner" style="height: 22em;">
+							<img class="current-image opaque" src="images/01.webp" alt="" />
+							<img class="current-image" src="images/02.webp" alt="" />
+							<img class="current-image" src="images/03.webp" alt="" />
+							<img class="current-image" src="images/04.webp" alt="" />
+						</div>
+					</div>
 			</header>
 
 		<!-- One -->
@@ -56,7 +64,7 @@
 							Controle as tarefas que precisa executar, a periodicidade em que elas devem ocorrer, os produtos que você precisa
 							e ainda compartilhe instruções com quem ajuda você na execução das rotinas do lar!</p>
 							<p>
-								<a href="https://play.google.com/store/apps/details?id=com.me.fa.faxinapp"><img src="images/google-play-badge.png" height="50px"/></a>
+								<a target="_blank" href="https://play.google.com/store/apps/details?id=com.me.fa.faxinapp"><img src="images/google-play-badge.png" height="50px"/></a>
 								<a href=""><img src="images/ios.png"height="50px"/></a>
 							</p>
 						</div>
@@ -408,9 +416,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="https://www.facebook.com/aplicativomeular" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+					<li><a target="_blank" href="https://www.facebook.com/aplicativomeular" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 					<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
-					<li><a href="https://www.instagram.com/appmeular" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a target="_blank" href="https://www.instagram.com/appmeular" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
 				<p class="copyright">&copy; Inove Aplicativos.</p>
 			</footer>
